--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
+    "bootstrap": "^5.3.8",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "19.2.0",
+    "recharts": "^3.4.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
